kotlin/src/main/kotlin/com/example/demo/global/error/ErrorResponse.kt
package com.example.demo.global.error

data class ErrorResponse(
    val status: Int,
    val message: String
)